New-Upload-1755854042013/objects/Profile_Record_Type_Visibility__c.object
<CustomObject>
    <fields>
        <fullName>Object_Permission_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the related Object Permission record</description>
        <label>Object Permission Lookup</label>
        <referenceTo>Profile_Object_Permission__c</referenceTo>
        <relationshipLabel>Record Type Visibilities by Object Permission</relationshipLabel>
        <relationshipName>RecTypeVisByObjPerm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record (displays Profile Name)</description>
        <label>Profile Name Lookup</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Record Type Visibilities by Name</relationshipLabel>
        <relationshipName>Record_Type_Visibilities_By_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record</description>
        <label>Profile Name</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Record Type Visibilities</relationshipLabel>
        <relationshipName>Record_Type_Visibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Name of the record type</description>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_Visibility_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the related Tab Visibility record</description>
        <label>Tab Visibility Lookup</label>
        <referenceTo>Profile_Tab_Visibility__c</referenceTo>
        <relationshipLabel>Record Type Visibilities by Tab Visibility</relationshipLabel>
        <relationshipName>RecTypeVisByTabVis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the record type is visible</description>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Profile Record Type Visibility</label>
    <nameField>
        <displayFormat>PRTV-{0000}</displayFormat>
        <label>Record Type Visibility Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Record Type Visibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>